@@ -43,7 +43,7 @@ enum {MANAGETOOLSMENUITEM=0xd000,TOOLNUMBER};
 //help
 enum {ABOUTMENUITEM=0xe000,ABOUTQTMENUITEM,HELPMENUITEM};
 
-enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,AUTOONETAB,BEKIND,MAXPREFSWIDGETS};
+enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,AUTOONETAB,OPENTABPOS,BEKIND,MAXPREFSWIDGETS};
 enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXRECENTS,MSGCHECKTIME,MAXMENUSESSIONS,MAXPREFSINTWIDGETS};
 enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,PREFSTERMCOMMAND,PREFSPRINTCOMMAND,PREFSPAGESIZE,PREFSROOTCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,MAXPREFSOTHERWIDGETS};
 
@@ -293,6 +293,7 @@ class KKEditClass : public QObject
 		unsigned int					prefsTabWidth=4;
 		bool							prefsAutoShowCompletions;
 		bool							autoOneTab=false;
+		bool							openTabToRight=true;
 
 //theme
 		QColor						prefsHiLiteLineColor;
@@ -472,6 +473,7 @@ class KKEditClass : public QObject
 		void							reloadDocument(void);
 		void							setCompWordList(void);
 		void							insertCompletion(const QString &completion);
+		void							moveTabToRight(int newpos);
 
 //bookmark vars
 		QHash<int,bookMarkStruct>	bookMarks;
